# Dictionary-Application

./: CMakeLists.txt  main.cpp
src/add_new_word/: add_new_word.cpp  add_new_word.h
src/base_tab_widget/: base_tab_widget.cpp  base_tab_widget.h
src/change_color/: change_color.cpp  change_color.h
src/config_detail_view_panel/: config_detail_view_panel.cpp  config_detail_view_panel.h
src/content_layout/: content_layout.cpp  content_layout.h
src/cos/: a.out  main.cpp
src/custom_completer/: custom_completer.cpp  custom_completer.h
src/custom_entry_line/: entry_line.cpp  entry_line.h
src/custom_label_entry_box/: custom_label_entry_box.cpp  custom_label_entry_box.h
src/custom_list/: custom_list.cpp  custom_list.h
src/custom_message_box/: custom_message_box.cpp  custom_message_box.h
src/custom_vbox_layout/: custom_vbox_layout.cpp  custom_vbox_layout.h
src/custom_widget/: custom_widget.cpp  custom_widget.h
src/data/: config_file.h  person_data.json  searched_regex.cpp  searched_regex.h  setting_person_list.cpp  setting_person_list.h  style.css  word_data.json
src/date/: current_date.cpp  current_date.h  date.cpp  date.h  date_config.h  time_delta.cpp  time_delta.h
src/delay/: delay.cpp  delay.h
src/detail_view/: detail_view.cpp  detail_view.h
src/detail_view_one_language_layout/: detail_view_one_language_layout.cpp  detail_view_one_language_layout.h
src/dictionary/: dictionary.cpp  dictionary.h
src/double_grp_box/: double_grp_box.cpp  double_grp_box.h
src/image_button/: image_button.cpp  image_button.h
src/image_label/: image_label.cpp  image_label.h
src/index_boxes/: double_index_box.cpp  double_index_box.h  index_box.cpp  index_box.h  once_index_box.cpp  once_index_box.h
src/login_entry_line/: login_entry_line.cpp  login_entry_line.h
src/login_view/: login_view.cpp  login_view.h
src/main_class/: main_class.cpp  main_class.h
src/newdict_layout/: newdict_layout.cpp  newdict_layout.h
src/password_entry_line/: password_entry_line.cpp  password_entry_line.h
src/person/: person.cpp  person.h  person_errors.cpp  person_errors.h
src/person_data_window/: person_data_window.cpp  person_data_window.h
src/regex_check/: regex_check.cpp  regex_check.h
src/register_window/: register_window.cpp  register_window.h
src/swiper/: direction_swiper.cpp  direction_swiper.h  language_swiper.cpp  language_swiper.h  sort_swiper.cpp  sort_swiper.h  swiper.cpp  swiper.h
src/text_button/: custom_button.cpp.autosave  text_button.cpp  text_button.h
src/text_label/: text_label.cpp  text_label.h
src/translation/: translation.cpp  translation.h
src/vertical_label/: vertical_label.cpp  vertical_label.h
src/word_pair/: word_pair.cpp  word_pair.h
src/word_window/: word_window.cpp  word_window.h
src/wordlist_widget/: wordlist_widget.cpp  wordlist_widget.h
